--- a/AutoLoad/config.json
+++ b/AutoLoad/config.json
@@ -5,7 +5,7 @@
 			"Showmode": [
 				"fullscreen",
 				"fullscreen",
-				"window_full",
+				"window_fullscreen",
 				"window"
 				],
 			"Size": [
