--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,7 @@ jobs:
           path: .cache
           restore-keys: |
             mkdocs-material-
+      - run: pip install --upgrade pip
       - run: pip install mkdocs-material
       - run: pip install jieba
       - run: pip install mike
